Finalised latest section and fixed minor layout issues
- added banner to latest section
- set up positioning of banner
- fixed sections that didn't need margins at top and bottom
- fixed social media grid so as not to stretch the buttons on larger screen sizes
-fixed checkbox at newsletter section

--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ a:visited {
   background-color: rgba(0, 0, 0, 0.4);
   text-align: center;
   line-height: 3rem;
+  max-width: 110px;
 }
 
 .logo {
@@ -291,13 +292,14 @@ span {
   display: inline-block;
 }
 
+.section-container {
+  padding: 50px 15px;
+  display: block;
+}
+
 header .row {
   height: 70px;
   display: table;
-}
-header .section-container {
-  padding: 50px 15px;
-  display: block;
 }
 header .block {
   border: 1px solid #ddd;
@@ -514,26 +516,32 @@ nav .security-nav {
 #latest {
   position: relative;
 }
+#latest .latest-mainheader {
+  position: relative;
+  width: 100%;
+  -webkit-box-shadow: 0 3px 35px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 35px rgba(0, 0, 0, 0.1);
+}
+#latest .latest-cnt-header {
+  display: block;
+  position: relative;
+  padding: 0 15px;
+}
+#latest .latest-cnt-header span {
+  padding: 40px 0;
+}
 #latest .latestsp {
   position: relative;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 5px;
-  margin: auto;
-  display: block;
-  padding: 15px 0;
+  text-transform: uppercase;
 }
 #latest .latestsp:after {
   content: "";
-  position: relative;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: absolute;
   height: 5px;
-  margin: auto;
+  width: 100%;
   display: block;
   background-color: #333645;
+  bottom: 0;
 }
 #latest h3 {
   font-size: 1rem;
@@ -549,9 +557,12 @@ nav .security-nav {
 }
 #latest .latest-container {
   text-align: left;
+  margin-top: -30px;
 }
 #latest .latest-card {
   margin-top: 30px;
+  -webkit-box-shadow: 0 3px 35px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 35px rgba(0, 0, 0, 0.1);
 }
 #latest .latest-header {
   position: relative;
@@ -611,14 +622,13 @@ nav .security-nav {
 #signup {
   background-color: #ddd;
   text-align: left;
-  padding: 0 15px;
   position: relative;
 }
 #signup h2 {
   font-size: 2rem;
 }
 #signup .signup-form {
-  padding: 50px 30px;
+  padding: 0 30px;
 }
 #signup .newsletter-textfields {
   margin: 0 0 15px;
@@ -686,7 +696,8 @@ nav .security-nav {
   display: block;
 }
 #signup .checkbox-cnt .checkbox-style:after {
-  top: -5px;
+  right: 40%;
+  top: 10%;
   width: 8px;
   height: 16px;
   border: solid white;
@@ -713,7 +724,6 @@ nav .security-nav {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   color: white;
-  padding: 47px 0 43px;
   position: relative;
 }
 #contact a {
@@ -735,6 +745,7 @@ nav .security-nav {
   -webkit-columns: 1 1 1 1;
      -moz-columns: 1 1 1 1;
           columns: 1 1 1 1;
+  padding: 50px 0;
 }
 
 .col {
@@ -757,8 +768,8 @@ nav .security-nav {
 .socialmedia-grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 30px 1fr;
-  grid-template-columns: 1fr 1fr;
+  -ms-grid-columns: 110px 30px 110px;
+  grid-template-columns: 110px 110px;
   -ms-grid-rows: 1fr 30px 1fr;
   grid-template-rows: 1fr 1fr;
   grid-gap: 30px;
