--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -122,4 +122,5 @@
   background-color: rgba(0, 0, 0, 0.4);
   text-align: center;
   line-height: 3rem;
+  max-width: 110px;
 }
